--- a/hatebu_analysis.ipynb
+++ b/hatebu_analysis.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "本プログラムはDAI(@never_be_a_pm) さんの以下サイトのプログラムをベースに作成したものとなります。\n",
+    "公開にあたっては、DAIさんの許可を得ております。本プログラムの二次使用に関してはDAIさんに確認下さい（私への確認は不要です）\n",
+    "\n",
+    "https://review-of-my-life.blogspot.jp/2017/10/python-web-scraping-data-collection-analysis.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Python及び使用しているライブラリのバージョンの確認"
    ]
   },
